# PiClaw

./: CMakeLists.txt  NOTICE.txt  README.md
Common/: packet.h
PiClaw_Client/: CMakeLists.txt
PiClaw_Client/include/: adc.h  arm.h  glove.h  mpu.h  udpSender.h
PiClaw_Client/include/LinuxI2CDev/ADS1115/: ADS1115.cpp  ADS1115.h
PiClaw_Client/include/LinuxI2CDev/I2Cdev/: I2Cdev.cpp  I2Cdev.h
PiClaw_Client/include/LinuxI2CDev/MPU6050/: MPU6050.cpp  MPU6050.h
PiClaw_Client/include/LinuxI2CDev/QMC5883P/: QMC5883P.cpp  QMC5883P.h
PiClaw_Client/src/: adc.cpp  arm.cpp  glove.cpp  main.cpp  mpu.cpp
PiClaw_Server/: CMakeLists.txt
PiClaw_Server/include/: robot.h  servo.h  udpReceiver.h
PiClaw_Server/src/: main.cpp  robot.cpp  servo.cpp
